--- a/website code/language/cn.json
+++ b/website code/language/cn.json
@@ -1,5 +1,8 @@
 {
     "test": "测试",
     "furniture_tag": "家具拼装服务",
-    "tutorial_tag": "教学服务"
+    "tutorial_tag": "教学服务",
+    "pra_tag": "专注于提供墨尔本地区最专业的家具拼装服务,以及家具运送服务",
+    "read_more": "了解更多",
+    "pra_tag_tutor": "高效定制学习,只学不会的,只学考的。H&D满足学习方面的所有要求"
 }
