--- a/website code/language/en.json
+++ b/website code/language/en.json
@@ -1,5 +1,8 @@
 {
     "test": "Test",
     "furniture_tag": "Furniture service",
-    "tutorial_tag": "Tutorial service"
+    "tutorial_tag": "Tutorial service",
+    "pra_tag": "Providing the most professional furniture assembly services in Melbourne, as well as furniture delivery services",
+    "read_more": "read more",
+    "pra_tag_tutor": "They help students to improve their grades, understand difficult concepts, receive extra help to catch up with classroom lessons."
 }
