index page is finshed

--- a/website code/language/en.json
+++ b/website code/language/en.json
@@ -4,5 +4,7 @@
     "tutorial_tag": "Tutorial service",
     "pra_tag": "Providing the most professional furniture assembly services in Melbourne, as well as furniture delivery services",
     "read_more": "read more",
-    "pra_tag_tutor": "They help students to improve their grades, understand difficult concepts, receive extra help to catch up with classroom lessons."
-}
+    "pra_tag_tutor": "They help students to improve their grades, understand difficult concepts, receive extra help to catch up with classroom lessons.",
+    "scan_code":"Scan QR code",
+    "close_detail":"close"
+} 
