--- a/website code/language/cn.json
+++ b/website code/language/cn.json
@@ -9,5 +9,7 @@
     "close_detail":"关闭",
     "header_funiture":"专业家具拼装服务",
     "Furnture_range":"服务范围:IKEA提货,家具拆装,长短期行李寄存服务准点，为您提供最优质的运送和家具拼装服务",
-    "furniture_intro":"组装安装家用及复杂结构家具， 所有项目会由本公司承包且分配给员工执行。对于宜家等品牌来说，正规家具组装技术可以延长家具使用的寿命"
-} 
+    "furniture_intro":"组装安装家用及复杂结构家具， 所有项目会由本公司承包且分配给员工执行。对于宜家等品牌来说，正规家具组装技术可以延长家具使用的寿命",
+    "tutor1_title" : "Monash IT 专业高分天才 Tutor",
+    "tutor2_title" : "Monash software engineering & commerce 双学位天才 Tutor"
+}
