update tutor translate

--- a/website code/language/cn.json
+++ b/website code/language/cn.json
@@ -10,6 +10,14 @@
     "header_funiture":"专业家具拼装服务",
     "Furnture_range":"服务范围:IKEA提货,家具拆装,长短期行李寄存服务准点，为您提供最优质的运送和家具拼装服务",
     "furniture_intro":"组装安装家用及复杂结构家具， 所有项目会由本公司承包且分配给员工执行。对于宜家等品牌来说，正规家具组装技术可以延长家具使用的寿命",
-    "tutor1_title" : "Monash IT 专业高分天才 Tutor",
-    "tutor2_title" : "Monash software engineering & commerce 双学位天才 Tutor"
+    "tutor1_title": "Monash IT 专业高分天才 Tutor",
+    "tutor2_title": "Monash software engineering & commerce 双学位天才 Tutor",
+    "tutor1_intro": "IT大三学长,software development相关科目都获得HD,近年开始进行1v1辅导,熟知重难点、应对技巧,擅长coding辅导,始终保持高好评率。",
+    "tutor2_intro": "现是Monash大学大三学长,software engineering & commerce 双学位,近年开始进行1v1辅导,熟知重难点、考试技巧,擅长举例子使知识点更加通俗易懂,保持超高好评率。",
+    "tutor1_contact": "联系方式:
+    微信:13143542183
+    Email:gilolojhua@gmail.com",
+    "tutor2_contact": "联系方式:
+    微信:Nicholaslee0168
+    Email:nicholasleeeman@gmail.com"
 }
