--- a/website code/language/cn.json
+++ b/website code/language/cn.json
@@ -14,10 +14,6 @@
     "tutor2_title": "Monash software engineering & commerce 双学位天才 Tutor",
     "tutor1_intro": "IT大三学长,software development相关科目都获得HD,近年开始进行1v1辅导,熟知重难点、应对技巧,擅长coding辅导,始终保持高好评率。",
     "tutor2_intro": "现是Monash大学大三学长,software engineering & commerce 双学位,近年开始进行1v1辅导,熟知重难点、考试技巧,擅长举例子使知识点更加通俗易懂,保持超高好评率。",
-    "tutor1_contact": "联系方式:
-    微信:13143542183
-    Email:gilolojhua@gmail.com",
-    "tutor2_contact": "联系方式:
-    微信:Nicholaslee0168
-    Email:nicholasleeeman@gmail.com"
+    "tutor1_contact": "联系方式 微信 13143542183 Email gilolojhua@gmail.com",
+    "tutor2_contact": "联系方式 微信 Nicholaslee0168 Email nicholasleeeman@gmail.com"
 }
